Fix issue setting the clientId and add validation for the ApplicationSecret.
