# auth-api-server/src/main/java/com/cartobucket/auth/api/server/validators/ValidApplication.java
@@ -1,0 +1,84 @@
+/*
+ * Copyright 2023 Bryce Groff (Cartobucket LLC)
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+ * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
+ * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
+ * to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all copies or substantial portions
+ * of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
+ * BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+ * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+ * ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ */
+
+package com.cartobucket.auth.api.server.validators;
+
+import com.cartobucket.auth.data.services.ApplicationService;
+import com.cartobucket.auth.data.services.AuthorizationServerService;
+import jakarta.inject.Inject;
+import jakarta.validation.Constraint;
+import jakarta.validation.ConstraintValidator;
+import jakarta.validation.ConstraintValidatorContext;
+import jakarta.validation.Payload;
+import jakarta.validation.constraintvalidation.SupportedValidationTarget;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+import java.util.UUID;
+
+import static jakarta.validation.constraintvalidation.ValidationTarget.ANNOTATED_ELEMENT;
+import static java.lang.annotation.ElementType.ANNOTATION_TYPE;
+import static java.lang.annotation.ElementType.CONSTRUCTOR;
+import static java.lang.annotation.ElementType.FIELD;
+import static java.lang.annotation.ElementType.METHOD;
+import static java.lang.annotation.ElementType.PARAMETER;
+import static java.lang.annotation.ElementType.TYPE_USE;
+
+@Retention(RetentionPolicy.RUNTIME)
+@Constraint(validatedBy = { ValidApplication.Validator.class })
+@Target(value = {
+        METHOD,
+        FIELD,
+        ANNOTATION_TYPE,
+        CONSTRUCTOR,
+        PARAMETER,
+        TYPE_USE})
+@SupportedValidationTarget(ANNOTATED_ELEMENT)
+@Documented
+public @interface ValidApplication {
+    String message() default "The Application was not found";
+
+    Class<? extends Payload>[] payload() default {};
+
+    Class<?>[] groups() default {};
+    public class Validator implements ConstraintValidator<ValidApplication, UUID> {
+        @Inject
+        ApplicationService applicationService;
+
+        @Override
+        public void initialize(ValidApplication constraintAnnotation) {
+            ConstraintValidator.super.initialize(constraintAnnotation);
+        }
+
+        @Override
+        public boolean isValid(UUID value, ConstraintValidatorContext context) {
+            try {
+                 applicationService.getApplication(value);
+            } catch (Exception e) {
+                context
+                        .buildConstraintViolationWithTemplate("");
+                return false;
+            }
+            return true;
+        }
+    }
+}
+
